--- a/CoinView/Views/Shared/_Layout.cshtml
+++ b/CoinView/Views/Shared/_Layout.cshtml
@@ -36,6 +36,7 @@
                 <ul class="nav navbar-nav">
                     <li><a asp-area="" asp-controller="User" asp-action="GetData" asp-route-id="3">Lena</a></li>
                 </ul>
+                <div>@RenderSection("InfoArea")</div>
             </div>
         </div>
     </nav>
