--- a/CoinView/Views/Summary/Summary.cshtml
+++ b/CoinView/Views/Summary/Summary.cshtml
@@ -33,3 +33,14 @@
 
 </script>
 
+@section InfoArea {
+    <div class="InfoArea">
+        BTC &nbsp;&nbsp; 
+        <span class="@(Model.InfoArea.BitcoinChangePercent1h >= 0 ? "TextGreen" : "TextRed")">@Model.InfoArea.BitcoinChangePercent1h.ToString("P")</span> /
+        <span class="@(Model.InfoArea.BitcoinChangePercent24h >= 0 ? "TextGreen" : "TextRed")">@Model.InfoArea.BitcoinChangePercent24h.ToString("P")</span> /
+        <span class="@(Model.InfoArea.BitcoinChangePercent7d >= 0 ? "TextGreen" : "TextRed")">@Model.InfoArea.BitcoinChangePercent7d.ToString("P")</span> 
+        <span class="BitcoinPrice">@Model.InfoArea.BitcoinPriceEUR / @Model.InfoArea.BitcoinPriceUSD</span>
+        <span class="Timestamp">@Model.InfoArea.Timestamp.ToString()</span>
+    </div>
+}
+
