--- a/CoinView/Views/Summary/Summary.cshtml
+++ b/CoinView/Views/Summary/Summary.cshtml
@@ -1,26 +1,7 @@
 ﻿@model CoinView.Models.SummaryViewModel
 
 @section InfoArea {
-    <div class="InfoArea">
-        <table>
-            <tr>
-                <td></td>
-                <td>1h</td>
-                <td>24h</td>
-                <td>7d</td>
-                <td>@Model.InfoArea.BitcoinPriceUSD</td>
-                <td class="Timestamp">@Model.InfoArea.Timestamp.ToString()</td>
-            </tr>
-            <tr>
-                <td>BTC</td>
-                <td class="@(Model.InfoArea.BitcoinChangePercent1h >= 0 ? "TextGreen" : "TextRed")">@Model.InfoArea.BitcoinChangePercent1h.ToString("P")</td>
-                <td class="@(Model.InfoArea.BitcoinChangePercent24h >= 0 ? "TextGreen" : "TextRed")">@Model.InfoArea.BitcoinChangePercent24h.ToString("P")</td>
-                <td class="@(Model.InfoArea.BitcoinChangePercent7d >= 0 ? "TextGreen" : "TextRed")">@Model.InfoArea.BitcoinChangePercent7d.ToString("P")</td>
-                <td>@Model.InfoArea.BitcoinPriceEUR</td>
-                <td></td>
-            </tr>
-        </table>
-    </div>
+    @Html.DisplayFor(x => x.InfoArea)
 }
 
 <div class="Content">
