--- a/CoinView/Views/User/User.cshtml
+++ b/CoinView/Views/User/User.cshtml
@@ -1,14 +1,7 @@
 ﻿@model CoinView.Models.UserViewModel
 
 @section InfoArea {
-    <div class="InfoArea">
-        BTC &nbsp;&nbsp;
-        <span class="@(Model.InfoArea.BitcoinChangePercent1h >= 0 ? "TextGreen" : "TextRed")">@Model.InfoArea.BitcoinChangePercent1h.ToString("P")</span> /
-        <span class="@(Model.InfoArea.BitcoinChangePercent24h >= 0 ? "TextGreen" : "TextRed")">@Model.InfoArea.BitcoinChangePercent24h.ToString("P")</span> /
-        <span class="@(Model.InfoArea.BitcoinChangePercent7d >= 0 ? "TextGreen" : "TextRed")">@Model.InfoArea.BitcoinChangePercent7d.ToString("P")</span>
-        <span class="BitcoinPrice">@Model.InfoArea.BitcoinPriceEUR / @Model.InfoArea.BitcoinPriceUSD</span>
-        <span class="Timestamp">@Model.InfoArea.Timestamp.ToString()</span>
-    </div>
+    @Html.DisplayFor(x => x.InfoArea)
 }
 
 <div class="Content">
