--- a/CoinView/wwwroot/css/main.css
+++ b/CoinView/wwwroot/css/main.css
@@ -66,8 +66,13 @@ h4 {
 }
 
 button {
+    color: #9d9d9d;
     background: #131e25;
-    border-color: #000;
+    border: 0px;
+}
+
+button:hover {
+    color: #fff;
 }
 
 .Content {
