--- a/CoinView/Views/Summary/DisplayTemplates/SummaryDO.cshtml
+++ b/CoinView/Views/Summary/DisplayTemplates/SummaryDO.cshtml
@@ -13,10 +13,10 @@
         </tr>
         <tr class="BorderTop">
             <th>Bought</th>
-            <td class="Number BorderLeft">@Model.InvestsBuyValueEUR.ToString("C")</td>
-            <td class="Number">@Model.TradesBuyValueEUR.ToString("C")</td>
-            <td class="Number">@Model.CreationsBuyValueEUR.ToString("C")</td>
-            <td class="Number BorderLeft">@Model.TotalBuyValueEUR.ToString("C")</td>
+            <td class="Number BorderLeft TextGrey">@Model.InvestsBuyValueEUR.ToString("C")</td>
+            <td class="Number TextGrey">@Model.TradesBuyValueEUR.ToString("C")</td>
+            <td class="Number TextGrey">@Model.CreationsBuyValueEUR.ToString("C")</td>
+            <td class="Number BorderLeft TextGrey">@Model.TotalBuyValueEUR.ToString("C")</td>
         </tr>
         <tr>
             <th>Holding</th>
@@ -34,10 +34,10 @@
         </tr>
         <tr>
             <th></th>
-            <td class="Number BorderLeft">@Model.InvestsResultValueEURPercent.ToString("P")</td>
-            <td class="Number">@Model.TradesResultValueEURPercent.ToString("P")</td>
+            <td class="Number BorderLeft TextGrey">@Model.InvestsResultValueEURPercent.ToString("P")</td>
+            <td class="Number TextGrey">@Model.TradesResultValueEURPercent.ToString("P")</td>
             <td></td>
-            <td class="Number BorderLeft">@Model.TotalResultValueEURPercent.ToString("P")</td>
+            <td class="Number BorderLeft TextGrey">@Model.TotalResultValueEURPercent.ToString("P")</td>
         </tr>
     </table>
 
@@ -52,10 +52,10 @@
         </tr>
         <tr class="BorderTop">
             <th>Bought</th>
-            <td class="Number BorderLeft">@Model.InvestsBuyValueBTC.ToString("0.########")</td>
-            <td class="Number">@Model.TradesBuyValueBTC.ToString("0.########")</td>
-            <td class="Number">@Model.CreationsBuyValueBTC.ToString("0.########")</td>
-            <td class="Number BorderLeft">@Model.TotalBuyValueBTC.ToString("0.########")</td>
+            <td class="Number BorderLeft TextGrey">@Model.InvestsBuyValueBTC.ToString("0.########")</td>
+            <td class="Number TextGrey">@Model.TradesBuyValueBTC.ToString("0.########")</td>
+            <td class="Number TextGrey">@Model.CreationsBuyValueBTC.ToString("0.########")</td>
+            <td class="Number BorderLeft TextGrey">@Model.TotalBuyValueBTC.ToString("0.########")</td>
         </tr>
         <tr>
             <th>Holding</th>
@@ -73,10 +73,10 @@
         </tr>
         <tr>
             <th></th>
-            <td class="Number">@Model.InvestsResultValueBTCPercent.ToString("P")</td>
-            <td class="Number">@Model.TradesResultValueBTCPercent.ToString("P")</td>
+            <td class="Number TextGrey">@Model.InvestsResultValueBTCPercent.ToString("P")</td>
+            <td class="Number TextGrey">@Model.TradesResultValueBTCPercent.ToString("P")</td>
             <td></td>
-            <td class="Number BorderLeft">@Model.TotalResultValueBTCPercent.ToString("P")</td>
+            <td class="Number BorderLeft TextGrey">@Model.TotalResultValueBTCPercent.ToString("P")</td>
         </tr>
     </table>
 
