--- a/CoinView/Views/Shared/DisplayTemplates/InfoAreaDO.cshtml
+++ b/CoinView/Views/Shared/DisplayTemplates/InfoAreaDO.cshtml
@@ -4,7 +4,7 @@
     <table>
         <tr>
             <td></td>
-            <td>1h</td>
+            @*<td>1h</td>*@
             <td>24h</td>
             <td>7d</td>
             <td>@Model.BitcoinPriceUSD</td>
@@ -12,7 +12,7 @@
         </tr>
         <tr>
             <td>BTC</td>
-            <td class="@(Model.BitcoinChangePercent1h >= 0 ? "TextGreen" : "TextRed")">@Model.BitcoinChangePercent1h.ToString("P")</td>
+            @*<td class="@(Model.BitcoinChangePercent1h >= 0 ? "TextGreen" : "TextRed")">@Model.BitcoinChangePercent1h.ToString("P")</td>*@
             <td class="@(Model.BitcoinChangePercent24h >= 0 ? "TextGreen" : "TextRed")">@Model.BitcoinChangePercent24h.ToString("P")</td>
             <td class="@(Model.BitcoinChangePercent7d >= 0 ? "TextGreen" : "TextRed")">@Model.BitcoinChangePercent7d.ToString("P")</td>
             <td>@Model.BitcoinPriceEUR</td>
