--- a/CoinView/Views/User/DisplayTemplates/CreationDO.cshtml
+++ b/CoinView/Views/User/DisplayTemplates/CreationDO.cshtml
@@ -2,7 +2,7 @@
 
 <tr>
     <td>@Model.Creation.Coin.Name</td>
-    <td class="Number @(Model.PercentChange1h >= 0 ? "TextGreen" : "TextRed")">@Model.PercentChange1h.ToString("P")</td>
+    @*<td class="Number @(Model.PercentChange1h >= 0 ? "TextGreen" : "TextRed")">@Model.PercentChange1h.ToString("P")</td>*@
     <td class="Number @(Model.PercentChange24h >= 0 ? "TextGreen" : "TextRed")">@Model.PercentChange24h.ToString("P")</td>
     <td class="Number @(Model.PercentChange7d >= 0 ? "TextGreen" : "TextRed")">@Model.PercentChange7d.ToString("P")</td>
     <td class="Number">@Model.SellPricePerShareEUR.ToString("C")</td>
